[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextflowspawner"
description = "Spawn Nextflow pipelines from Jupyterhub and configure them interactively"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Patrick Hüther", email = "huether@imb-mainz.de" },
]
classifiers = [
  "Framework :: Jupyter"
]
keywords = [
  "Jupyterhub",
  "Nextflow"
]
requires-python = ">=3.10"
dependencies = [
  "jsonschema",
  "jupyterhub >= 5.0.0",
  "jupyter-server-proxy"
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/nextflowspawner/__about__.py"

[project.entry-points."jupyter_serverproxy_servers"]
nextflow = "nextflowspawner:ignite"

[project.entry-points."jupyterhub.spawners"]
nextflow = "nextflowspawner:NextflowSpawner"

[tool.hatch.build.targets.sdist]
include = [
  "/src"
]